do this in a backwards compatible way, so if you have custom formatters for Cucumber 0.2 they should
still work.

We are also deprecating the step_list, step_pattern, feature_list, and feature_pattern accessors on
Cucumber::Rake::Task.  For complex settings please rely on cucumber profiles in your rake tasks:
http://wiki.github.com/aslakhellesoy/cucumber/using-rake#profiles

=== New features
* Rake task supports cucumber.yml profiles (#187 Ben Mabey)
* Field value steps for Webrat (Jack Chen)
* Added translation for Bulgarian (Krasimir Angelov)
* Updated translation for Polish (#273 Grzegorz Marszałek)
* Only a single World proc can be registered. World extension now happens by calling #World with ruby modules.
* Portuguese uses Funcionalidade in stead of Característica and accented words are aliased with unaccented ones (Alexandre da Silva and Felipe Coury).
* The usage formatter also prints unused step definitions (Aslak Hellesøy)
* Better exception if a World proc returns nil. (Aslak Hellesøy)
* Allow Step Definitions to use |*varargs|, but only on Ruby 1.9. (Aslak Hellesøy)
* Snippets for steps that use Step Tables or PyStrings include block param and object type hint comment (#247 Joseph Wilk)
* Support description string for Backgrounds (#271 Joseph Wilk)

=== Bugfixes
* After methods not being executed when Background fails (#288 Luismi Cavallé)
* Fixed dependency on internal files in rspec breaks cucumber w/ rspec-1.2.4 (#291 Aslak Hellesøy)
* Fix color use when using autotest on Linux. (Hans de Graaff)
* Fixed incorrect calculation of pystring indentation (#279 Eugene Naydanov)
* Fixed --format html leads to an error (#252 Aslak Hellesøy)
* Fixed Background runs twice (#255 Aslak Hellesøy)
* Fixed Background Transactions and :xx (#270 Aslak Hellesøy)
* Fixed Autospec failing with cucumber 0.2 (#254 Aslak Hellesøy)
* Sibling file detecting not working (#278 Aslak Hellesøy)

=== Removed/changed features
* The visitor API has changed slightly: