@@ -4,7 +4,7 @@ Feature: Passing background sample
     Given '10' cukes
 
   Scenario: passing background
-    Then I should have '10' cukes
-    
+    Then I should have '10' cukes    
+
   Scenario: another passing background
     Then I should have '10' cukes
