@@ -1,0 +1,8 @@
+Feature: Tagged hooks
+  In order to provide more flexible setups
+  I should be able to specify exactly
+  where hooks are executed
+  
+  @i_am_so_special
+  Scenario: Yes I am
+    When special me goes to town
