@@ -28,6 +28,10 @@ module Cucumber
       @steps.max_line_length(self)
     end
 
+    def accept_hook?(hook)
+      @tags.accept_hook?(hook)
+    end
+
     # TODO: Remove when we use StepCollection everywhere
     def previous_step(step)
       i = @steps.index(step) || -1
